--- a/src/app/launch/launch.component.html
+++ b/src/app/launch/launch.component.html
@@ -1,1 +1,6 @@
-<h1>aaaa</h1>
+<h1>Hello</h1>
+  <button class="hamburger hamburger--minus" (click) = "toggleMenu()" [ngClass]="{'is-active': isMenuActive}" type="button">
+    <span class="hamburger-box">
+      <span class="hamburger-inner"></span>
+    </span>
+  </button>
