added breakpoint standards, menu icon is complete

--- a/src/sass/launch.component.scss
+++ b/src/sass/launch.component.scss
@@ -1,2 +1,4 @@
-$hamburger-layer-color: white;
+//overriding defaults TODO: change to px
+$hamburger-layer-color         : white;
+$hamburger-active-layer-color  : $hamburger-layer-color;
 @import '../../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss';
