--- a/src/app/launch/launch.component.html
+++ b/src/app/launch/launch.component.html
@@ -1,6 +1,7 @@
-<h1>Hello</h1>
   <button class="hamburger hamburger--minus" (click) = "toggleMenu()" [ngClass]="{'is-active': isMenuActive}" type="button">
     <span class="hamburger-box">
       <span class="hamburger-inner"></span>
     </span>
   </button>
+
+  <p> assets: <a target="_blank" href="https://github.com/jonsuh/hamburgers">borgar menu</a></p>
