--- a/src/app/launch/launch.component.html
+++ b/src/app/launch/launch.component.html
@@ -4,4 +4,6 @@
     </span>
   </button>
 
-  <p> assets: <a target="_blank" href="https://github.com/jonsuh/hamburgers">borgar menu</a></p>
+  <!-- <p> assets: <a target="_blank" href="https://github.com/jonsuh/hamburgers">borgar menu</a></p> -->
+
+  <div *ngIf="isMenuActive">  <app-menu></app-menu> </div>
