--- a/src/app/launch/launch.component.html
+++ b/src/app/launch/launch.component.html
@@ -6,4 +6,4 @@
 
   <!-- <p> assets: <a target="_blank" href="https://github.com/jonsuh/hamburgers">borgar menu</a></p> -->
 
-  <div *ngIf="isMenuActive" [@enterAnimation]>  <app-menu></app-menu> </div>
+  <div *ngIf="isMenuActive">  <app-menu></app-menu> </div>
