--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-launch> </app-launch>
+<app-menu-icon> </app-menu-icon>
+<app-work-exp></app-work-exp>
+<app-about-me></app-about-me>
+<app-test-component></app-test-component>
