changed scss file locations, added margin variable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-menu-icon> </app-menu-icon>
+<app-launchpage></app-launchpage>
 <app-work-exp></app-work-exp>
 <app-about-me></app-about-me>
 <app-test-component></app-test-component>
