given up on isMenuActive communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-menu-icon> </app-menu-icon>
-<app-launchpage></app-launchpage>
-<app-work-exp></app-work-exp>
-<app-about-me></app-about-me>
-<app-test-component></app-test-component>
+<app-core></app-core>
